--- a/STM32Cube/V3.2.1.ioc
+++ b/STM32Cube/V3.2.1.ioc
@@ -5,23 +5,24 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-FREERTOS.IPParameters=Tasks01
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F2
 Mcu.IP0=ADC1
 Mcu.IP1=FREERTOS
-Mcu.IP10=TIM5
+Mcu.IP10=TIM8
 Mcu.IP11=USART3
-Mcu.IP2=I2C3
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM5
 Mcu.IPNb=12
 Mcu.Name=STM32F207V(C-E-F-G)Tx
 Mcu.Package=LQFP100
@@ -52,67 +53,86 @@ Mcu.Pin3=PC15-OSC32_OUT
 Mcu.Pin30=PD11
 Mcu.Pin31=PD14
 Mcu.Pin32=PD15
-Mcu.Pin33=PC9
-Mcu.Pin34=PA8
+Mcu.Pin33=PC6
+Mcu.Pin34=PC7
 Mcu.Pin35=PA13
 Mcu.Pin36=PA14
 Mcu.Pin37=PA15
-Mcu.Pin38=PC10
-Mcu.Pin39=PD0
+Mcu.Pin38=PD0
+Mcu.Pin39=PD1
 Mcu.Pin4=PH0-OSC_IN
-Mcu.Pin40=PD1
-Mcu.Pin41=PD2
-Mcu.Pin42=PD3
-Mcu.Pin43=PD4
-Mcu.Pin44=PD5
-Mcu.Pin45=PB3
-Mcu.Pin46=PB6
-Mcu.Pin47=PB7
-Mcu.Pin48=PB8
-Mcu.Pin49=VP_FREERTOS_VS_ENABLE
+Mcu.Pin40=PD2
+Mcu.Pin41=PD3
+Mcu.Pin42=PD4
+Mcu.Pin43=PD5
+Mcu.Pin44=PB3
+Mcu.Pin45=PB6
+Mcu.Pin46=PB7
+Mcu.Pin47=PB8
+Mcu.Pin48=VP_FREERTOS_VS_ENABLE
+Mcu.Pin49=VP_SYS_VS_tim6
 Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin50=VP_SYS_VS_Systick
 Mcu.Pin6=PC0
 Mcu.Pin7=PC1
 Mcu.Pin8=PC2
 Mcu.Pin9=PC3
-Mcu.PinsNb=51
+Mcu.PinsNb=50
 Mcu.UserConstants=
 Mcu.UserName=STM32F207VCTx
-MxCube.Version=4.14.0
-MxDb.Version=DB.4.0.140
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
+MxCube.Version=4.16.0
+MxDb.Version=DB.4.0.160
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=TIM5_CH1 (ENC2_1)
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=S_TIM5_CH1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=TIM5_CH2 (ENC2_2)
 PA1.Locked=true
 PA1.Signal=S_TIM5_CH2
 PA13.Locked=true
-PA13.Mode=Serial-Wire
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial-Wire
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=TIM2_CH1 (ENC3_1)
 PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=ADC1_IN4 (Batt Volt.)
 PA4.Locked=true
 PA4.Signal=ADCx_IN4
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=ADC1_IN5 (Curr. Sense)
 PA5.Locked=true
 PA5.Signal=ADCx_IN5
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=TIM3_CH1 (ENC1_1)
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=TIM3_CH2 (ENC1_2)
 PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
-PA8.Locked=true
-PA8.Mode=I2C
-PA8.Signal=I2C3_SCL
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=GPIO_Output (P1)
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=GPIO_Output (P3)
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.Locked=true
@@ -121,82 +141,141 @@ PB10.Signal=USART3_TX
 PB11.Locked=true
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=GPIO_Output (IMU Sync)
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=TIM2_CH2 (ENC3_2)
 PB3.Locked=true
 PB3.Signal=S_TIM2_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=TIM4_CH3 (N3)
 PB6.Locked=true
 PB6.Signal=S_TIM4_CH1
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=TIM4_CH3 (N2)
 PB7.Locked=true
 PB7.Signal=S_TIM4_CH2
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=GPIO_Output (En_Gate)
 PB8.Locked=true
 PB8.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ADC1_IN10 (POT1)
 PC0.Locked=true
 PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=ADC1_IN10 (POT2)
 PC1.Locked=true
 PC1.Signal=ADCx_IN11
-PC10.Locked=true
-PC10.Signal=GPXTI10
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=ADC1_IN10 (POT3)
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=ADC1_IN10 (POT4)
 PC3.Locked=true
 PC3.Signal=ADCx_IN13
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=ADC1_IN10 (POT5)
 PC4.Locked=true
 PC4.Signal=ADCx_IN14
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=ADC1_IN10 (POT6)
 PC5.Locked=true
 PC5.Signal=ADCx_IN15
-PC9.Locked=true
-PC9.Mode=I2C
-PC9.Signal=I2C3_SDA
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=TIM8_CH1 (ENC4_1)
+PC6.Signal=S_TIM8_CH1
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=TIM8_CH2 (ENC4_2)
+PC7.Signal=S_TIM8_CH2
 PCC.Checker=false
 PCC.Line=STM32F2x7
 PCC.MCU=STM32F207V(C-E-F-G)Tx
-PCC.MXVersion=4.14.0
+PCC.MXVersion=4.16.0
 PCC.PartNumber=STM32F207VCTx
 PCC.Seq0=0
 PCC.Series=STM32F2
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=GPIO_Output (MPWM)
 PD0.Locked=true
 PD0.Signal=GPIO_Output
+PD1.GPIOParameters=GPIO_Label
+PD1.GPIO_Label=GPIO_Output (M_OC)
 PD1.Locked=true
 PD1.Signal=GPIO_Output
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=GPIO_Input (Hall_sense2)
 PD10.Locked=true
 PD10.Signal=GPIO_Input
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=GPIO_Input (Hall_sense1)
 PD11.Locked=true
 PD11.Signal=GPIO_Input
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=TIM4_CH3 (N1)
 PD14.Locked=true
 PD14.Signal=S_TIM4_CH3
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=GPIO_Input (OCTW)
 PD15.Locked=true
 PD15.Signal=GPIO_Input
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=GPIO_Output (Gain)
 PD2.Locked=true
 PD2.Signal=GPIO_Input
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=GPIO_Output (DC_CALl)
 PD3.Locked=true
 PD3.Signal=GPIO_Output
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=GPIO_Output (OC1)
 PD4.Locked=true
 PD4.Signal=GPIO_Output
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=GPIO_Output (OC2)
 PD5.Locked=true
 PD5.Signal=GPIO_Output
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=GPIO_Input (Fault)
 PD8.Locked=true
 PD8.Signal=GPIO_Input
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=GPIO_Input (Hall_sense3)
 PD9.Locked=true
 PD9.Signal=GPIO_Input
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=TIM1_CH2 (Serv3)
 PE11.Locked=true
 PE11.Signal=S_TIM1_CH2
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=TIM1_CH3 (Serv4)
 PE13.Locked=true
 PE13.Signal=S_TIM1_CH3
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=GPIO_Output (P2)
 PE14.Locked=true
 PE14.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=GPIO_Output (LED1)
 PE2.Locked=true
 PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=GPIO_Output (LED2)
 PE3.Locked=true
 PE3.Signal=GPIO_Output
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=TIM1_CH1 (Serv2)
 PE9.Locked=true
 PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.Locked=true
@@ -209,10 +288,10 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F207VCTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F2 V1.3.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F2 V1.4.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -225,27 +304,39 @@ ProjectManager.ProjectFileName=V3.2.1.ioc
 ProjectManager.ProjectName=V3.2.1
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
-ProjectManager.ToolChainLocation=
+ProjectManager.ToolChainLocation=C\:\\Users\\Akshay\\Desktop\\Motot Driver\\Akshay\\V3.2\\V3.2.1 - Copy
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_I2C3_Init-I2C3-false,4-MX_TIM1_Init-TIM1-false,5-MX_TIM2_Init-TIM2-false,6-MX_TIM3_Init-TIM3-false,7-MX_TIM4_Init-TIM4-false,8-MX_TIM5_Init-TIM5-false,9-MX_USART3_UART_Init-USART3-false
-RCC.48MHZClocksFreq_Value=48000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.CortexFreq_Value=16000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_TIM1_Init-TIM1-false,4-MX_TIM2_Init-TIM2-false,5-MX_TIM3_Init-TIM3-false,6-MX_TIM4_Init-TIM4-false,7-MX_TIM5_Init-TIM5-false,8-MX_USART3_UART_Init-USART3-false,9-MX_TIM8_Init-TIM8-false
+RCC.48MHZClocksFreq_Value=60000000
+RCC.AHBFreq_Value=120000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=30000000
+RCC.APB1TimFreq_Value=60000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=60000000
+RCC.APB2TimFreq_Value=120000000
+RCC.CortexFreq_Value=120000000
+RCC.EthernetFreq_Value=120000000
+RCC.FCLKCortexFreq_Value=120000000
 RCC.FamilyName=M
-RCC.HSE_VALUE=25000000
+RCC.HCLKFreq_Value=120000000
+RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=FamilyName,LSI_VALUE,HSI_VALUE,SYSCLKFreq_VALUE,AHBFreq_Value,CortexFreq_Value,APB1Freq_Value,APB2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,PLLCLKFreq_Value,48MHZClocksFreq_Value,VCOI2SOutputFreq_Value,VcooutputI2S,HSE_VALUE,RTCHSEDivFreq_Value,RTCFreq_Value,I2SClocksFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
+RCC.MCO2PinFreq_Value=120000000
+RCC.PLLCLKFreq_Value=120000000
+RCC.PLLM=8
+RCC.PLLN=240
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.RTCHSEDivFreq_Value=4000000
+RCC.SYSCLKFreq_VALUE=120000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=240000000
 RCC.VcooutputI2S=96000000
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
@@ -263,8 +354,6 @@ SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
-SH.GPXTI10.0=GPIO_EXTI10
-SH.GPXTI10.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
@@ -289,9 +378,14 @@ SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
 SH.S_TIM5_CH2.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,Encoder_Interface
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,Encoder_Interface
+SH.S_TIM8_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation1 CH1
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation1 CH1,Channel-PWM Generation4 CH4
 TIM1.Period=2001
 TIM1.Prescaler=161
 TIM1.Pulse-PWM\ Generation1\ CH1=100
@@ -300,6 +394,6 @@ TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=V3.2.1
