tested servo and bldc

--- a/STM32Cube/Ninja-CubeMX-v-3-2.ioc
+++ b/STM32Cube/Ninja-CubeMX-v-3-2.ioc
@@ -304,7 +304,7 @@ ProjectManager.ProjectFileName=Ninja-CubeMX-v-3-2.ioc
 ProjectManager.ProjectName=Ninja-CubeMX-v-3-2
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
-ProjectManager.ToolChainLocation=I\:\\NINJA-ECU-Firmware\\STM32Cube
+ProjectManager.ToolChainLocation=C\:\\Users\\Akshay\\Documents\\GitHub\\NINJA-ECU-Firmware\\STM32Cube
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_TIM1_Init-TIM1-false,4-MX_TIM2_Init-TIM2-false,5-MX_TIM3_Init-TIM3-false,6-MX_TIM4_Init-TIM4-false,7-MX_TIM5_Init-TIM5-false,8-MX_USART3_UART_Init-USART3-false,9-MX_TIM8_Init-TIM8-false
 RCC.48MHZClocksFreq_Value=60000000
@@ -385,13 +385,15 @@ SH.S_TIM8_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation1 CH1,Channel-PWM Generation4 CH4
-TIM1.Period=2001
-TIM1.Prescaler=161
+TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation1 CH1,Channel-PWM Generation4 CH4,ClockDivision
+TIM1.Period=1000
+TIM1.Prescaler=2400
 TIM1.Pulse-PWM\ Generation1\ CH1=100
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Period
+TIM4.Period=400
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_tim6.Mode=TIM6
