--- a/STM32Cube/Ninja-CubeMX-v-3-2.ioc
+++ b/STM32Cube/Ninja-CubeMX-v-3-2.ioc
@@ -5,6 +5,35 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+Dma.Request0=USART3_RX
+Dma.Request1=USART3_TX
+Dma.RequestsNb=2
+Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.USART3_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.USART3_RX.0.Instance=DMA1_Stream1
+Dma.USART3_RX.0.MemBurst=DMA_MBURST_SINGLE
+Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.0.Mode=DMA_CIRCULAR
+Dma.USART3_RX.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.USART3_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.USART3_TX.1.Instance=DMA1_Stream3
+Dma.USART3_TX.1.MemBurst=DMA_MBURST_SINGLE
+Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.1.Mode=DMA_CIRCULAR
+Dma.USART3_TX.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default
@@ -12,18 +41,19 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F2
 Mcu.IP0=ADC1
-Mcu.IP1=FREERTOS
-Mcu.IP10=TIM8
-Mcu.IP11=USART3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=TIM5
-Mcu.IPNb=12
+Mcu.IP1=DMA
+Mcu.IP10=TIM5
+Mcu.IP11=TIM8
+Mcu.IP12=USART3
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=13
 Mcu.Name=STM32F207V(C-E-F-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -82,6 +112,8 @@ Mcu.UserName=STM32F207VCTx
 MxCube.Version=4.16.0
 MxDb.Version=DB.4.0.160
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -306,7 +338,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=C\:\\Users\\Akshay\\Documents\\GitHub\\NINJA-ECU-Firmware\\STM32Cube
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_TIM1_Init-TIM1-false,4-MX_TIM2_Init-TIM2-false,5-MX_TIM3_Init-TIM3-false,6-MX_TIM4_Init-TIM4-false,7-MX_TIM5_Init-TIM5-false,8-MX_USART3_UART_Init-USART3-false,9-MX_TIM8_Init-TIM8-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_DMA_Init-DMA-false,3-MX_ADC1_Init-ADC1-false,4-MX_TIM1_Init-TIM1-false,5-MX_TIM2_Init-TIM2-false,6-MX_TIM3_Init-TIM3-false,7-MX_TIM4_Init-TIM4-false,8-MX_TIM5_Init-TIM5-false,9-MX_USART3_UART_Init-USART3-false,10-MX_TIM8_Init-TIM8-false
 RCC.48MHZClocksFreq_Value=60000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
