--- a/STM32Cube/Ninja_V_3_MX.ioc
+++ b/STM32Cube/Ninja_V_3_MX.ioc
@@ -84,8 +84,9 @@ KeepUserPlacement=false
 Mcu.Family=STM32F2
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=TIM8
-Mcu.IP11=USART3
+Mcu.IP10=TIM7
+Mcu.IP11=TIM8
+Mcu.IP12=USART3
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
@@ -94,7 +95,7 @@ Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM4
 Mcu.IP9=TIM5
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32F207V(C-E-F-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -141,12 +142,13 @@ Mcu.Pin45=PB6
 Mcu.Pin46=PB7
 Mcu.Pin47=PB8
 Mcu.Pin48=VP_SYS_VS_tim6
+Mcu.Pin49=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PH1-OSC_OUT
 Mcu.Pin6=PC0
 Mcu.Pin7=PC1
 Mcu.Pin8=PC2
 Mcu.Pin9=PC3
-Mcu.PinsNb=49
+Mcu.PinsNb=50
 Mcu.UserConstants=
 Mcu.UserName=STM32F207VCTx
 MxCube.Version=4.21.0
@@ -164,6 +166,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
@@ -380,7 +383,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM1_Init-TIM1-false-HAL,5-MX_TIM2_Init-TIM2-false-HAL,6-MX_TIM3_Init-TIM3-false-HAL,7-MX_TIM4_Init-TIM4-false-HAL,8-MX_TIM5_Init-TIM5-false-HAL,9-MX_USART3_UART_Init-USART3-false-HAL,10-MX_TIM8_Init-TIM8-false-HAL,11-SystemClock_Config-RCC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM1_Init-TIM1-false-HAL,5-MX_TIM2_Init-TIM2-false-HAL,6-MX_TIM3_Init-TIM3-false-HAL,7-MX_TIM4_Init-TIM4-false-HAL,8-MX_TIM5_Init-TIM5-false-HAL,9-MX_USART3_UART_Init-USART3-false-HAL,10-MX_TIM8_Init-TIM8-false-HAL,11-SystemClock_Config-RCC-false-HAL,12-MX_TIM7_Init-TIM7-false-HAL
 RCC.48MHZClocksFreq_Value=60000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -488,6 +491,10 @@ TIM5.IC1Polarity=TIM_ICPOLARITY_RISING
 TIM5.IC2Polarity=TIM_ICPOLARITY_RISING
 TIM5.IPParameters=Period,AutoReloadPreload,IC1Polarity,EncoderMode,IC2Polarity
 TIM5.Period=0xFFFFFFFF
+TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM7.IPParameters=Period,AutoReloadPreload,Prescaler
+TIM7.Period=50000
+TIM7.Prescaler=59
 TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM8.EncoderMode=TIM_ENCODERMODE_TI1
 TIM8.IC1Polarity=TIM_ICPOLARITY_RISING
@@ -498,4 +505,6 @@ USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=Ninja_V_3_MX
