Fixed communication, ADC, and encoders
fixed two way communication setup the ADC and got encoder code to work with encoders

--- a/STM32Cube/Ninja_V_3_MX.ioc
+++ b/STM32Cube/Ninja_V_3_MX.ioc
@@ -73,7 +73,7 @@ Dma.USART3_TX.1.Instance=DMA1_Stream3
 Dma.USART3_TX.1.MemBurst=DMA_MBURST_SINGLE
 Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.1.Mode=DMA_CIRCULAR
+Dma.USART3_TX.1.Mode=DMA_NORMAL
 Dma.USART3_TX.1.PeriphBurst=DMA_PBURST_SINGLE
 Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
@@ -158,6 +158,8 @@ NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI15_10_IRQn=true\:1\:0\:true\:false\:true
+NVIC.EXTI9_5_IRQn=true\:1\:0\:true\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -169,6 +171,7 @@ NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=TIM5_CH1 (ENC2_1)
@@ -293,14 +296,16 @@ PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=GPIO_Output (M_OC)
 PD1.Locked=true
 PD1.Signal=GPIO_Output
-PD10.GPIOParameters=GPIO_Label
-PD10.GPIO_Label=GPIO_Input (Hall_sense2)
+PD10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PD10.GPIO_Label=GPIO_EXTI10 (Hall_Sense_2)
+PD10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PD10.Locked=true
-PD10.Signal=GPIO_Input
-PD11.GPIOParameters=GPIO_Label
-PD11.GPIO_Label=GPIO_Input (Hall_sense1)
+PD10.Signal=GPXTI10
+PD11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PD11.GPIO_Label=GPIO_EXTI11 (Hall_Sense_1)
+PD11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PD11.Locked=true
-PD11.Signal=GPIO_Input
+PD11.Signal=GPXTI11
 PD14.GPIOParameters=GPIO_Label
 PD14.GPIO_Label=TIM4_CH3 (N1)
 PD14.Locked=true
@@ -329,10 +334,11 @@ PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=GPIO_Input (Fault)
 PD8.Locked=true
 PD8.Signal=GPIO_Input
-PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=GPIO_Input (Hall_sense3)
+PD9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PD9.GPIO_Label=GPIO_EXTI9 (Hall_Sense_3)
+PD9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PD9.Locked=true
-PD9.Signal=GPIO_Input
+PD9.Signal=GPXTI9
 PE11.GPIOParameters=GPIO_Label
 PE11.GPIO_Label=TIM1_CH2 (Serv3)
 PE11.Locked=true
@@ -431,6 +437,12 @@ SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
